<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.facetracking.mobilevision.activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@color/colorAccent"
        android:gravity="top"
        app:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/facetracker"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/mobileVisionAPI"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView android:id="@+id/imgCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <ImageView
                        android:id="@+id/imgInput"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="3.5"
                        android:scaleType="centerCrop"
                        android:src="@drawable/blank_profile" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:text="@string/input_image"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <ImageView
                        android:id="@+id/imgResult"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="3.5"
                        android:scaleType="centerCrop"
                        android:src="@drawable/blank_profile" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:text="@string/result_image"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout android:id="@+id/statusLayout"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/very_sad" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/no_image_selected"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabChooseImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/ic_photo_camera_black_24dp"
        app:fabSize="normal" />
</FrameLayout>
